# open-stocks-mcp

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  JOURNEY_TESTING.md  Makefile  PACKAGING.md  PHASE_2_TODO.md  PYTEST_MARKERS_PLAN.md  QA_REPORT_2025-10-06.md  README.md  SCHWAB_STATUS.md  SECURITY.md  TODO.md  config.yaml.example  coverage-summary.md  coverage.json  pyproject.toml  test-refactoring-summary.md
.beads/: metadata.json
.foreman/: foreman.db-shm  foreman.db-wal
.foreman/contexts/220fa5e5-d213-4c4c-8932-6aae21667933/: play-124.json  play-2.json
.foreman/contexts/3862999e-0699-47fa-8b49-085d691430eb/: play-1050.json  play-1052.json  play-1115.json  play-1118.json  play-1120.json  (+171 more)
.foreman/reports/: end-session-220fa5e5-d213-4c4c-8932-6aae21667933.html
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: publish.yml  tests.yml
contributing/: PACKAGING.md  README.md
dist_test/: open_stocks_mcp-0.1.2-py3-none-any.whl
docs/: ADK-testing-evals.md  BROKER_CAPABILITY_REMEDIATION.md  GRACEFUL_AUTH_IMPLEMENTATION.md  MCP_TOOLS_REFERENCE.md  MONITORING_RUNBOOK.md  OPENTELEMETRY_TRACING.md  SCHWAB_INTEGRATION_PLAN.md  SCHWAB_SETUP.md  TEST_MARKERS.md  TOOL_COMPARISON_ROBINHOOD_VS_SCHWAB.md
docs/api/: README.md  tools.md
examples/Docker/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.test  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  env_example  open_stocks_mcp-0.1.4-py3-none-any.whl  test-docker.sh  validate-docker-setup.sh
examples/google-adk-agent/: ADK-testing-evals.md  README.md  agent.py  prompts.py  requirements.txt
examples/google_adk_agent/: README.md  __init__.py  agent.py  prompts.py
examples/kubernetes/: README.md  configmap.yaml  deployment.yaml  kustomization.yaml  persistentvolumeclaim.yaml  pvc.yaml  secret.yaml.example  service.yaml
examples/notebooks/: 01_market_data_quickstart.ipynb  02_trading_safe_dry_run.ipynb  README.md  options_analysis.ipynb  portfolio_snapshot.ipynb
examples/open-stocks-mcp-docker/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  config.both-brokers.yaml  docker-compose.both-brokers.yml  docker-compose.dev.yml  docker-compose.yml  test-docker.sh  validate-docker-setup.sh
scripts/: check_precommit_deps.py  generate_api_docs.py  generate_tool_docs.py  schwab_coverage.py  validate-release.sh
src/open_stocks_mcp/: __init__.py  alerting.py  config.py  health.py  logging_config.py  monitoring.py  tracing.py
temp/: open_stocks_mcp-0.1.3-py3-none-any.whl
tests/: TRADING_TEST_SAFETY.md  __init__.py  conftest.py  test_api_access.py  test_auth_config.py  test_basic.py  test_integration.py  test_market_data_tools.py  test_robinhood_account_tools.py  test_robinhood_auth.py  test_robinhood_order_tools.py  test_robinhood_tools.py  test_server_login_flow.py
tests/auth/: test_session_manager.py
tests/evals/: 0_sys_health_check_test.json  0_sys_metrics_summary_test.json  0_sys_rate_limit_status_test.json  0_sys_session_status_test.json  1_acc_schwab_account_balances_test.json  1_acc_schwab_account_numbers_test.json  1_acc_schwab_account_test.json  1_acc_schwab_accounts_test.json  1_acc_schwab_check_margin_status_test.json  1_acc_schwab_get_aggregate_positions_test.json  1_acc_schwab_get_all_account_data_test.json  1_acc_schwab_get_build_holdings_test.json  1_acc_schwab_get_day_trades_test.json  1_acc_schwab_get_margin_interest_test.json  1_acc_schwab_get_user_preferences_test.json  1_acc_schwab_portfolio_test.json  2_mkt_price_history_test.json  2_mkt_schwab_get_instrument_by_cusip_test.json  2_mkt_schwab_get_market_hours_test.json  2_mkt_schwab_get_movers_sp500_test.json  2_mkt_schwab_get_movers_test.json  2_mkt_schwab_instrument_test.json  2_mkt_schwab_price_history_test.json  2_mkt_schwab_quote_test.json  2_mkt_schwab_quotes_test.json  2_mkt_schwab_search_instruments_test.json  2_mkt_search_stocks_test.json  2_mkt_stock_earnings_test.json  2_mkt_stock_news_test.json  2_mkt_stock_ratings_test.json  2_mkt_stock_splits_test.json  2_mkt_top_100_stocks_test.json  2_mkt_top_movers_sp500_test.json  2_mkt_top_movers_test.json  3_wth_all_watchlists_test.json  3_wth_watchlist_by_name_test.json  3_wth_watchlist_performance_test.json  4_ntf_account_features_test.json  4_ntf_latest_notification_test.json  4_ntf_margin_calls_test.json  (+60 more)
tests/fixtures/: __init__.py  broker_payloads.py
tests/http_transport/: test_http_auth.py  test_http_error_handling.py  test_http_integration.py  test_http_mcp_protocol.py  test_http_server.py
tests/integration/: conftest.py  live_market_harness.py  test_basic_api.py  test_live_market_entrypoint.py  test_live_market_harness.py  test_multi_broker.py  test_schwab_live_journeys.py  test_tool_schema_integration.py
tests/performance/: __init__.py  test_mcp_tool_benchmarks.py  test_tool_performance.py
tests/server/: test_server_app.py  test_server_login_flow.py  test_tool_execution_limits.py  test_tool_helpers.py
tests/unit/: test_account_tools.py  test_alerting.py  test_analytics_tools.py  test_api_docs_generator.py  test_auth_coordinator.py  test_batch_fetch.py  test_broker_architecture.py  test_broker_base.py  test_broker_comparison_tools.py  test_broker_factory.py  test_broker_filter.py  test_broker_fixture_payloads.py  test_broker_registry.py  test_broker_request_policy.py  test_cache.py  test_capabilities_and_streaming.py  test_circuit_breaker.py  test_claude_guidance_docs.py  test_client_app.py  test_config.py  test_cross_broker_tools.py  test_dependency_constraints.py  test_dev_tooling.py  test_dividend_tools.py  test_docker_compose_security.py  test_docker_example.py  test_docs_build_target.py  test_docs_version_alignment.py  test_error_handling.py  test_error_handling_module_split.py  test_eval_schema.py  test_example_notebooks.py  test_health_service.py  test_http_transport.py  test_kubernetes_examples.py  test_marker_infrastructure.py  test_market_data_module_split.py  test_market_research_tools.py  test_market_tools.py  test_monitoring.py  (+39 more)
(+127 files in other folders)
